# terra-incognita-v2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Anweisungen.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  catchup.md  pyproject.toml  pytest.ini  requirements-ci.txt
.agent-os/: pr-spec.json
.archon/commands/: ti-backend.md  ti-code-audit.md  ti-documentation.md  ti-frontend.md  ti-heal.md  ti-meta.md  ti-orch.md  ti-pdf-lookup.md  ti-research.md  ti-security.md  ti-test-fast-ci.md  ti-test-strict.md  ti-verifier.md
.archon/workflows/: archon-fix-github-issue.yaml  archon-smart-pr-review.yaml  ti-design-session.yaml  ti-fast-verify.yaml  ti-fix-issue.yaml  ti-pr-lifecycle.yaml  ti-smart-pr-review.yaml
.cursor/agents/: backend-implementation-agent.md  code-audit-agent.md  documentation-agent.md  frontend-implementation-agent.md  heal.md  meta.md  orch.md  pdf-lookup-protocol.md  research-agent.md  security-code-review-agent.md  test-agent-fast-ci.md  test-agent-strict-reviewer.md  verifier.md
.cursor/rules/: BACKEND-RULES-backend.mdc  FRONTEND-RULES.mdc  GLOBAL-CURSOR-RULES-Agent-OS.mdc  MODEL-SWITCHING-PROTOCOL.mdc  NO-SILENT-DELETIONS.mdc  PR-WORKFLOW.mdc  RESEARCH-DATA-RULES.mdc  SUBAGENT-DELEGATION-FALLBACK.mdc  TEST-RULES.mdc  audit-mode.mdc  mvp-mode.mdc  strict-mode.mdc
.github/workflows/: cd-release.yml  ci-build-images.yml  ci.yml  nightly-soak.yml
app/: README.md
app/backend/: README.md  main.py
app/engine/: README.md  pyproject.toml
app/engine/terra_engine/: __init__.py
archive/legacy-docs/: Implementierungen.Architektur.md
deploy/: README.md
deploy/api/: Dockerfile  requirements-runtime.txt
deploy/caddy/: Caddyfile.hub  Caddyfile.vault
deploy/cloudflared/: README.md  config.hub.yml  config.vault.yml
deploy/compose/: env.example  hub.override.dev.yml  hub.override.host-tunnel.yml  hub.override.litestream-ci.yml  hub.override.quicktunnel.yml  hub.override.restore.yml  hub.yml  r2-pull.integration-ci.yml  vault.override.ci.yml  vault.override.dev.yml  vault.yml
deploy/litestream/: config.ci.yml  config.vault-pull.yml  config.yml
deploy/prometheus/: README.md  alert_rules.example.yml  bearer.token  prometheus.vault.yml  prometheus.yml
docker/archon/: .env.example  .gitignore  compose.override.example.yml  compose.yml
docs/greenfield/: README.md
docs/operations/: branch-and-pr-rules.md  hub-oracle-vm1-deployment-status.md  litestream.md  migrations.md  r2-buckets.md  restore-drill.md  secrets.md
knowledge/: README.md  verify.py
memory/: README.md
memory/session/: README.md  catchup-archive-legacy-sessions.md
memory/system/: decisions-archive-persistence-duckdb-era.md  decisions.md
research/: README.md
research/extracted/: README.md
research/incoming/: README.md
research/schema/: l4_formulas.schema.json  manifest.schema.json
research/work/: BATCH_REGEN_PDF_EXTRACTION_SPEC.md  DESIGN_SESSION_BRIEFING_terra055_20260507.md  README.md  inventory_2026-05-08.json  inventory_before_pdf_batch_regen_20260508.json  terra055_page_anchor_sweep.py  (+1 more)
scripts/: API_TEST_README.txt  audit_check.py  check_orchestrator_spec.py  check_pr_labels.py  check_protected_deletions.py  create_pr.py  feedback_router.py  memory_check.py  memory_writer.py  meta_orchestrator_check.py  rewrite_branch_strip_cursor_coauthor.py  rewrite_legacy_path_references.py  schema_lint.py  security_check.py  self_healing_analyzer.py  strip_cursor_coauthor_trailer.py  test_conceptnet.py  test_datamuse.py  test_google_kg.py
secrets/: .sops.yaml  README.md  example-age-devONLY.age.key  hub.sops.yaml
tests/: conftest.py  test_check_protected_deletions.py  test_cloudflared_config_lint.py  test_docs_links.py  test_observability_module.py  test_repo_layout.py  test_secrets_layout.py  test_strip_cursor_coauthor.py  test_tooling.py
tests/db/: test_replay_fts.py  (+3 more)
(+562 files in other folders)
